--- a/src/app/components/subject/subject.component.html
+++ b/src/app/components/subject/subject.component.html
@@ -1,15 +1,14 @@
 
 
 
-
-
-<button (click)="openModal()" class="flex items-center justify-center m-auto mb-5 bg-blue-500 text-white hover:text-blue-500 hover:bg-white border border-solid border-1 border-white hover:border-blue-700 p-4" type="button">
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 mr-2">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-  </svg>
-  <span>Add level</span>
+<button (click)="openModal()"
+class="flex items-center justify-center m-auto mb-5 bg-blue-500 text-white hover:text-blue-500 hover:bg-white border border-solid border-1 border-white hover:border-blue-700 p-4"
+type="button">
+<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 mr-2">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+</svg>
+<span>Add subject</span>
 </button>
-
 
 <div  tabindex="-1" aria-hidden="true" *ngIf="showModal"
   class="bg-gray-500 bg-opacity-75 flex items-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
@@ -17,7 +16,7 @@
     <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
       <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
         <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-          {{ editMode ? 'Update Level' : 'Add New Level' }}
+          {{ editMode ? 'Update Subject' : 'Add New Subject' }}
         </h3>
         <button type="button"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
@@ -31,41 +30,36 @@
       </div>
 
       <div class="p-4 md:p-5">
-        <form class="p-4 md:p-5" (ngSubmit)="editMode ? updateLevel() : addNewLevel()" #levelForm="ngForm">
+        <form class="p-4 md:p-5" (ngSubmit)="editMode ? updateSubject() : addSubject()" #subjectForm="ngForm">
           <div class="grid gap-4 mb-4 grid-cols-2">
             <div class="col-span-2">
-              <label for="description"
-                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
-              <input type="text" name="description" id="description"
+              <label for="intitule"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Intitule</label>
+              <input type="text" name="intitule" id="intitule"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                [(ngModel)]="newLevel.value.description" required>
+                [(ngModel)]="newSubject.value.intitule" required>
             </div>
-            <div class="col-span-2 sm:col-span-1">
-              <label for="maxPoints" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Max
-                Points</label>
-              <input type="number" name="maxPoints" id="maxPoints"
+            <div class="col-span-2">
+              <label for="parent" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Parent</label>
+              <input type="number" name="parent" id="parent"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                [(ngModel)]="newLevel.value.maxPoints" required>
+                [(ngModel)]="newSubject.value.parent.id" required>
             </div>
-            <div class="col-span-2 sm:col-span-1">
-              <label for="minPoints" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Min
-                Points</label>
-              <input type="number" name="minPoints" id="minPoints"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                [(ngModel)]="newLevel.value.minPoints" required>
-            </div>
+           
           </div>
 
           <div class="flex items-center mt-6 space-x-2 rtl:space-x-reverse justify-center">
 
           <button  type="submit"
+          
             class=" text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd"
                 d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
                 clip-rule="evenodd"></path>
             </svg>
-              {{ editMode ? 'Update' : 'Add' }}</button>
+            <span>{{ editMode ? 'Update' : 'Add' }}</span>
+            </button>
               <button type="button" 
               class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"  
               (click)="closeModal(); resetForm()">Cancel</button>
@@ -84,52 +78,53 @@
 
 
 
-
-
-
-
-
-
-
-<h2 class="text-2xl font-semibold leading-tight mb-4">Levels</h2>
-
-
-
-
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-3">
-  <div *ngFor="let level of levels" class="min-w-full shadow rounded-lg overflow-hidden bg-white">
-    <div class="p-4 flex flex-col">
-      <p class="text-gray-900 text-lg font-semibold mb-4 text-center">{{ level.description }}</p>
-      <div class="flex flex-wrap items-center mb-4 justify-center">
-        <div class="w-full md:w-1/2 lg:w-1/3 mb-2 ">
-          <p class="text-gray-600 text-sm"><strong>Max Points:</strong> {{ level.maxPoints }}</p>
-        </div>
-        <div class="w-full md:w-1/2 lg:w-1/3 mb-2">
-          <p class="text-gray-600 text-sm text-center"><strong>Min Points:</strong> {{ level.minPoints }}</p>
-        </div>
-      </div>
-      <div class="flex justify-center">
-
-
-        <button  (click)="editLevel(level)" class="mr-3 bg-orange-500 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-orange-700 p-4">
-          Update
-          <div class="icon-1"></div>
-          <div class="icon-2"></div>
-          <div class="icon-3"></div>
-        </button> 
-
-
-        <button (click)="deleteLevel(level);"
-          class="mr-3 bg-red-600 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-red-700 p-4">Delete
+<div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
+  <table class="w-full border-collapse bg-white text-left text-sm text-gray-500">
+    <thead class="bg-gray-50">
+      <tr>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Intitule</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Parent</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Children</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900 text-center">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let subject of subjects" class="border-b hover:bg-gray-50">
+        <td class="px-6 py-4">{{ subject.intitule }}</td>
+        <td class="px-6 py-4">{{ subject.parent ? subject.parent.intitule : 'No Parent' }}</td>
+        <td class="px-6 py-4">
+          <ul *ngIf="subject.children && subject.children.length > 0">
+            <li *ngFor="let child of subject.children">{{ child.intitule }}</li>
+          </ul>
+          <span *ngIf="!subject.children || subject.children.length === 0">No Children</span>
+        </td>
+        <td class="px-6 py-4">
+          <div class="flex justify-center gap-4">
+            <button type="submit" 
+            (click)="openModal(); editSubject(subject)"
+       
+          class="mr-3 bg-orange-500 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-orange-700 p-4">Update
           <div class="icon-1">
           </div>
           <div class="icon-2">
           </div>
           <div class="icon-3">
           </div>
-        </button>
-
-      </div>
-    </div>
-  </div>
+        </button> 
+        
+        
+        <button (click)="deleteSubject(subject)"
+        class="mr-3 bg-red-600 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-red-700 p-4">Delete
+        <div class="icon-1">
+        </div>
+        <div class="icon-2">
+        </div>
+        <div class="icon-3">
+        </div>
+      </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
