--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -1,1 +1,177 @@
-<p>question works!</p>
+<button (click)="openModal()"
+  class="flex items-center justify-center m-auto mb-5 bg-blue-500 text-white hover:text-blue-500 hover:bg-white border border-solid border-1 border-white hover:border-blue-700 p-4"
+  type="button">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 mr-2">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+  </svg>
+  <span>Add Question</span>
+</button>
+
+<div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
+  <table class="w-full border-collapse bg-white text-left text-sm text-gray-500">
+    <thead class="bg-gray-50">
+      <tr>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Text</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Answers Number</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Answers Number Correct</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Score Points</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Subject</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Level</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Media</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900 text-center">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let question of questions" class="border-b hover:bg-gray-50">
+        <td class="px-6 py-4">{{ question.text }}</td>
+        <td class="px-6 py-4">{{ question.answersNumber }}</td>
+        <td class="px-6 py-4">{{ question.answersNumberCorrect }}</td>
+        <td class="px-6 py-4">{{ question.scorePoints}}</td>
+        <td class="px-6 py-4">{{ question.subject.intitule }}</td>
+        <td class="px-6 py-4">{{ question.level.description }}</td>
+        <td class="px-6 py-4">
+          <ng-container *ngIf="question.mediaList && question.mediaList.length > 0; else noMedia">
+            <div *ngFor="let media of question.mediaList">
+              {{ media.link }}
+            </div>
+          </ng-container>
+          <ng-template #noMedia>No Media</ng-template>
+        </td>
+
+        <td class="px-6 py-4">
+          <div class="flex justify-center gap-4">
+            <button type="submit" (click)="openModal(); editQuestion(question)"
+              class="mr-3 bg-orange-500 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-orange-700 p-4">
+              Update
+            </button>
+            <button (click)="deleteQuestion(question)"
+              class="mr-3 bg-red-600 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-red-700 p-4">
+              Delete
+            </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<!-- Question Modal -->
+<div tabindex="-1" aria-hidden="true" *ngIf="showModal"
+  class="bg-gray-500 bg-opacity-75 flex items-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+  <div class="relative p-4 w-full max-w-md max-h-full text-center">
+    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+      <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+        <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+          {{ editMode ? 'Update Question' : 'Add New Question' }}
+        </h3>
+        <button type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-toggle="crud-modal">
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+
+      <div class="p-4 md:p-5">
+        <!-- Question Form -->
+        <form class="p-4 md:p-5" (ngSubmit)="editMode ? updateQuestion() : addQuestion()" #questionForm="ngForm">
+          <!-- Question Text -->
+          <div class="grid gap-4 mb-4 grid-cols-1">
+            <div class="col-span-2">
+              <label for="questionText" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Question
+                Text</label>
+              <input type="text" name="questionText" id="questionText"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.text" required>
+            </div>
+          </div>
+
+          <div class="grid gap-4 mb-4 grid-cols-2">
+            <div class="col-span-1">
+              <label for="answersNumber" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Answers
+                Number</label>
+              <input type="number" name="answersNumber" id="answersNumber"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.answersNumber" required>
+            </div>
+            <div class="col-span-1">
+              <label for="answersNumberCorrect"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Answers Number Correct</label>
+              <input type="number" name="answersNumberCorrect" id="answersNumberCorrect"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.answersNumberCorrect" required>
+            </div>
+
+            <div class="col-span-1">
+              <label for="type" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Type</label>
+              <input type="text" name="type" id="type"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.type" required>
+            </div>
+            <div class="col-span-1">
+              <label for="scorePoints" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Score
+                Points</label>
+              <input type="number" name="scorePoints" id="scorePoints"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.scorePoints" required>
+            </div>
+          </div>
+
+          <div class="grid gap-4 mb-4 grid-cols-2">
+            <div class="col-span-1">
+              <label for="subjectId"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Subject</label>
+              <input type="text" name="subjectId" id="subjectId"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.subject.id" required>
+            </div>
+            <div class="col-span-1">
+              <label for="levelId" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Level</label>
+              <input type="text" name="levelId" id="levelId"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.level.id" required>
+            </div>
+          </div>
+          <!-- Media Link and Type -->
+          <div class="grid gap-4 mb-4 grid-cols-2">
+            <div class="col-span-1">
+              <label for="mediaLink" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Media
+                Link</label>
+              <input type="text" name="mediaLink" id="mediaLink"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.mediaList.link">
+            </div>
+            <div class="col-span-1">
+              <label for="mediaType" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Media
+                Type</label>
+              <input type="text" name="mediaType" id="mediaType"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.mediaList.type">
+            </div>
+          </div>
+
+          <!-- Submit and Cancel Buttons -->
+          <div class="flex items-center mt-6 space-x-2 rtl:space-x-reverse justify-center">
+            <button type="submit"
+              class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+              <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                  d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+                  clip-rule="evenodd"></path>
+              </svg>
+              {{ editMode ? 'Update' : 'Add' }}
+            </button>
+            <button type="button"
+              class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"
+              (click)="closeModal(); resetForm()">Cancel</button>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
