--- a/src/app/components/quiz-dashboard/quiz-dashboard.component.html
+++ b/src/app/components/quiz-dashboard/quiz-dashboard.component.html
@@ -36,6 +36,11 @@
           <span class="sr-only">answer</span>
           Answer
         </a>
+        <a [routerLink]="['/students']"
+        class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
+        <span class="sr-only">student</span>
+        Student
+      </a>
       </nav>
 
       <div class="inline-flex items-center justify-center h-20 w-20 border-t border-gray-700">
