--- a/src/app/components/quiz-dashboard/quiz-dashboard.component.html
+++ b/src/app/components/quiz-dashboard/quiz-dashboard.component.html
@@ -36,10 +36,20 @@
           <span class="sr-only">answer</span>
           Answer
         </a>
+        <a [routerLink]="['/teachers']"
+        class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
+        <span class="sr-only">teachers</span>
+        Teachers
+      </a>
         <a [routerLink]="['/students']"
         class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
         <span class="sr-only">student</span>
         Student
+      </a>
+        <a [routerLink]="['/validations']"
+        class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
+        <span class="sr-only">validation</span>
+        Validations
       </a>
       </nav>
 
