--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -43,10 +43,22 @@
             <button type="submit" (click)="openModal(); editQuestion(question)"
               class="mr-3 bg-orange-500 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-orange-700 p-4">
               Update
+              <div class="icon-1">
+              </div>
+              <div class="icon-2">
+              </div>
+              <div class="icon-3">
+              </div>
             </button>
             <button (click)="deleteQuestion(question)"
               class="mr-3 bg-red-600 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-red-700 p-4">
               Delete
+              <div class="icon-1">
+              </div>
+              <div class="icon-2">
+              </div>
+              <div class="icon-3">
+              </div>
             </button>
           </div>
         </td>
@@ -136,24 +148,30 @@
             </div>
           </div>
           <!-- Media Link and Type -->
-          <div class="grid gap-4 mb-4 grid-cols-2">
-            <div class="col-span-1">
-              <label for="mediaLink" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Media
-                Link</label>
-              <input type="text" name="mediaLink" id="mediaLink"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                [(ngModel)]="newQuestion.value.mediaList.link">
+          <div class="grid gap-4 mb-4 grid-cols-2" *ngFor="let media of getMediaListControls(); let i = index">
+            <div class="col-span-2 mt-2">
+              <button type="button" class="text-red-600 font-medium" (click)="removeMediaItem(i)">Remove Media</button>
             </div>
             <div class="col-span-1">
-              <label for="mediaType" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Media
-                Type</label>
-              <input type="text" name="mediaType" id="mediaType"
+              <label for="mediaLink" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Media Link</label>
+              <input type="text" name="link" id="link"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                [(ngModel)]="newQuestion.value.mediaList.type">
+                [(ngModel)]="newQuestion.value.mediaList[i].link" required>
             </div>
-          </div>
+            <div class="col-span-1">
+              <label for="mediaType" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Media Type</label>
+              <input type="text" name="type" id="type"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                [(ngModel)]="newQuestion.value.mediaList[i].type" required>
+            </div>
+            <!-- Add a button to remove the media item -->
 
-          <!-- Submit and Cancel Buttons -->
+          </div>
+          
+          <!-- Button to add new media items -->
+          <button type="button" class="text-blue-700 font-medium" (click)="addMediaItem()">Add Media</button>
+
+          
           <div class="flex items-center mt-6 space-x-2 rtl:space-x-reverse justify-center">
             <button type="submit"
               class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
