--- a/src/app/components/start-quiz/start-quiz.component.html
+++ b/src/app/components/start-quiz/start-quiz.component.html
@@ -1,5 +1,4 @@
-
-
+<!-- Add *ngIf to check if the answer type is MultipleChoice -->
 <div *ngIf="test" class="bg-blue-500 p-8 rounded-md shadow-md">
   <h2 class="text-2xl font-bold mb-4 text-white">{{ test.instructions }} Questions</h2>
 
@@ -15,9 +14,21 @@
       <ul class="list-disc pl-6">
         <li *ngFor="let validation of getCurrentQuestion().question.validations" class="mb-2">
           <label class="flex items-center text-white">
-            <input type="radio" name="currentQuestion" [(ngModel)]="selectedAnswers[currentQuestionIndex]"
-              [value]="validation" class="mr-2 text-blue-500">
-            <span>{{ validation.answer.answerText }} - Points: {{ validation.points }}</span>
+            <input 
+  *ngIf="getCurrentQuestion().question.type.toString() === 'MultipleChoice'"
+  type="checkbox" 
+  name="currentQuestion" 
+  [checked]="isCheckboxSelected(validation)"
+  (change)="toggleCheckbox(validation)" 
+  class="mr-2 text-blue-500">
+            <input 
+              *ngIf="getCurrentQuestion().question.type.toString() !== 'MultipleChoice'"
+              type="radio" 
+              name="currentQuestion" 
+              [(ngModel)]="selectedAnswers[currentQuestionIndex]" 
+              [value]="validation" 
+              class="mr-2 text-blue-500">
+            <span>{{ validation.answer.answerText }} </span>
           </label>
         </li>
       </ul>
@@ -27,8 +38,6 @@
       <button (click)="nextQuestion()" [disabled]="!isAnswerSelected()" class="bg-blue-700 text-white py-2 px-4 rounded-md hover:bg-blue-800 focus:outline-none focus:shadow-outline-blue">
         {{ currentQuestionIndex < testQuestions.length - 1 ? 'Next' : 'Done' }}
       </button>
- 
-</div>
-
+    </div>
   </div>
 </div>
