--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -121,10 +121,17 @@
 
             <div class="col-span-1">
               <label for="type" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Type</label>
-              <input type="text" name="type" id="type"
+              <select name="type" id="type" [(ngModel)]="newQuestion.value.type"
+                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <option value="Single">Single</option>
+                <option value="MultipleChoice">MultipleChoice</option>
+                <option value="Direct">Direct</option>
+              </select>
+            </div>
+              <!-- <input type="text" name="type" id="type"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                 [(ngModel)]="newQuestion.value.type" required>
-            </div>
+            </div> -->
             <div class="col-span-1">
               <label for="scorePoints" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Score
                 Points</label>
