--- a/src/app/components/quiz-dashboard/quiz-dashboard.component.html
+++ b/src/app/components/quiz-dashboard/quiz-dashboard.component.html
@@ -87,7 +87,7 @@
           <span class="sr-only">User Menu</span>
           <div class="hidden md:flex md:flex-col md:items-end md:leading-tight">
             <span class="tname font-semibold">Mohamed Amine</span>
-            <span class="text-sm text-white">Dev Jwayva</span>
+            <span class="text-sm text-white">Dev Java</span>
           </div>
           <span class="h-12 w-12 ml-2 sm:ml-3 mr-2 bg-gray-100 rounded-full overflow-hidden">
             <img [src]="majidi" alt="user profile photo" class="h-full w-full object-cover">
